# bank_architecture

./: .gitignore  README.md  README.me  actix-web.md  docker-compose.yml
_protos/: deposit_service.proto  historical_service.proto
account_service/: Cargo.toml  Dockerfile  build.rs
account_service/proto/: account_service.proto
account_service/src/: account_service.rs  main.rs
api_gateway/: .env  Cargo.toml  Dockerfile  build.rs
api_gateway/proto/: account_service.proto  user_management.proto
api_gateway/src/: config.rs  jwt_auth.rs  main.rs  response.rs  user_management_client.rs
api_gateway/src/grpc_clients/: account_grpc_client.rs  deposit_grpc_client.rs  historical_grpc_client.rs  mod.rs  user_grpc_client.rs  withdrawal_grpc_client.rs
api_gateway/src/handlers/: account_handlers.rs  deposit_handlers.rs  healt_handler.rs  historical_handler.rs  mod.rs  user_handler.rs  withdrawal_handlers.rs
api_gateway/src/models/: account.rs  account_update_request.rs  config.rs  deposit_request.rs  login_user.rs  mod.rs  registrer_user.rs  response.rs  token_claims.rs  withdrawal_request.rs
deposit_service/: Cargo.toml  Dockerfile  build.rs
front/: angular.json  package-lock.json  package.json
historical_service/: Cargo.toml  Dockerfile  build.rs
protos/: historical_service.proto  notification_service.proto  user_management.proto  withdrawal_service.proto
simple_bank_ui/: Dockerfile  nginx.conf  package-lock.json  package.json
user_service/: Cargo.toml  Dockerfile  build.rs
user_service/src/: main.rs  mongodb_client.rs  user_service.rs
(+65 files in other folders)
