[package]
name = "account_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.6"
tokio = { version = "1", features = ["full"] }
prost = "0.9"
mongodb = "2.0"
dotenv = "0.15"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
prost-types = "0.9"
chrono = "0.4"
bson = "2.0"

[build-dependencies]
tonic-build = "0.6"