[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
argon2 = "0.5"
chrono = { version = "0.4.23", features = ["serde"] }
tokio = { version = "1.16", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.11"
jsonwebtoken = "8.2.0"
prost = "0.9"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tonic = "0.6.1"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
prost-types = "0.9"

[build-dependencies]
tonic-build = "0.6.1"
